# privacy-gateway-client-library

./: Cargo.toml  README.md
.github/workflows/: build.yml
apprelay/: Cargo.toml  apprelay.h  build.rs
apprelay/src/: android.rs  error_ffi.rs  lib.rs
