[package]
name = "apprelay"
version = "0.1.0"
authors = ["Chris Wood <chriswood@cloudflare.com>"]
edition = "2021"

[dependencies]
bytes = "1.2.0"
#bhttp = { git = "https://github.com/martinthomson/ohttp", features = ["bhttp", "http"] }
ohttp = { git = "https://github.com/chris-wood/ohttp-1", features = ["rust-hpke", "client", "proto-http"], default-features = false, branch = "caw/add-custom-labels" }
libc = "0.2"

[dependencies.jni]
version = "0.19.0"
optional = true

[features]
default = ["java"]

java = ["jni"]


[build-dependencies]
cbindgen = "0.17"

[lib]
crate-type = ["staticlib", "cdylib"]
