[package]
name = "apprelay"
version = "0.1.0"
authors = ["Chris Wood <chriswood@cloudflare.com>"]
edition = "2021"

[dependencies]
bytes = "1.2.0"
ohttp = { git = "https://github.com/martinthomson/ohttp", features = ["pq", "rust-hpke", "client"], default-features = false }
libc = "0.2"

thiserror = "1.0.32"
log = "0.4.17"

env_logger = "0.9.0"

[dependencies.jni]
version = "0.19.0"
optional = true

[features]
default = ["java"]

java = ["jni"]


[build-dependencies]
cbindgen = "0.17"

[lib]
crate-type = ["staticlib", "cdylib"]
